Add: jarmin: Barriers to access for people with disabilities

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1053,6 +1053,10 @@
         <a href="https://www.telerik.com/blogs/motor-disabilities-and-what-you-need-for-accessibility">Motor Disabilities and What You Need for Accessibility</a>,
         <i class="website">Telerik</i>, 30.07.2019.
       </li>
+      <li>
+        <a href="http://www.jarmin.com/accessibility/access/barriers.html">Barriers to access for people with disabilities</a>,
+        <i class="website">jarmin.com</i> (no date).
+      </li>
       <!--@@section testing/evaluation-->
       <li>Brajnik, Giorgio:
         <a href="https://users.dimi.uniud.it/~giorgio.brajnik/projects/bw/">An accessibility evaluation method based on Barrier Walkthrough</a>.
