Add: Behindertenbeauftragte fordern barrierefreie Medien / „Mainzer Erklärung“ verabschiedet

--- a/social-legal.html
+++ b/social-legal.html
@@ -241,6 +241,10 @@
         <a href="https://www.accessibility.nl/over-toegankelijkheid/wetgeving/" hreflang="nl">Wet- en regelgeving</a>,
         <i class="website">Stichting Accessibility</i></span> (no date).
       </li>
+      <li><span lang="de">
+        <a href="https://www.bundesfachstelle-barrierefreiheit.de/SharedDocs/Kurzmeldungen/DE/barrierefreie-medien-mainzer-erklaerung.html" hreflang="de">Behindertenbeauftragte fordern barrierefreie Medien / „Mainzer Erklärung“ verabschiedet</a>,
+        <i class="website">Bundesfachstelle Barrierefreiheit</i></span>, 10.12.2020.
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
