Add: Jonas and Sabatella: Accessibility in MuseScore

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1352,13 +1352,22 @@
       <li>Strobbe, Christophe:
         <a href="https://fosdem.org/2019/schedule/event/educational_resources_on_digital_accessibility/">Open Educational Resources on Digital Accessibility for Building Your Own Courses</a>:
         presentation in the
-        <a href="https://fosdem.org/2019/schedule/track/open_source_design/">Open Source Design devroom at FOSDEM 2019</a>.
+        <a href="https://archive.fosdem.org/2019/schedule/track/open_source_design/">Open Source Design devroom at FOSDEM 2019</a>.
+      </li>
+      <li>Jonas, Peter; Sabatella, Marc:
+        <a href="https://archive.fosdem.org/2020/schedule/event/accessibility_in_musescore/">Accessibility in MuseScore</a>.
+        presentation in the
+        <a href="https://archive.fosdem.org/2020/schedule/track/open_source_design/">Open Source Design devroom at FOSDEM 2020</a>.
       </li>
     </ul>
     <!--
     <section>
       <h2></h2>
       <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>,
+        </li>
         <li>
           <a href=""></a>
         </li>
@@ -1393,11 +1402,14 @@
       - Eclipse documentation: https://help.eclipse.org/2020-09/index.jsp
     * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html 
     * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
-    *(Nov 2020)  animated background: https://psychoslinux.gitlab.io/
+    * animated background:
+      background video (November 2020): https://psychoslinux.gitlab.io/
+      background animation (snowflakes, 10.12.2020): https://websemantics.uk/tools/font-size-conversion-pixel-point-em-rem-percent/
     * marquee:
       - (Nov 2020) https://www.bundesregierung.de/breg-de/service/publikationen/nationaler-aktionsplan-2-0-der-bundesregierung-zur-un-behindertenrechtskonvention-un-brk--729496
       - (02.12.2020) FinanzNachrichten.de: <div class="js-marque">: pausiert bei hover (kein Tastaturfokus?): https://www.finanznachrichten.de/nachrichten-2020-11/51366215-belgien-kritisiert-deutsche-corona-weihnachtsregeln-016.htm
       - (02.12.2020) https://businessam.be/belgie-start-op-5-januari-met-vaccineren-3/
+      - (08.12.2020: marquee and animated gifs) https://www.officemuseum.com/
     * Pressing pagedown button takes you to the next article instead of scrolling down (02.12.2020): https://www.euronews.com/2020/12/01/us-attorney-general-william-barr-says-no-widespread-election-fraud-disputing-trump
     * low contrast (grey on white, green on white) (02.12.2020): https://www.gesuendernet.de/gesundheit/gesunde-ernaehrung/item/1443-tee-gesundheit-aus-der-tasse.html
     * two head elements, each containing a title element (02.12.2020): https://dev.to/rly
