Add: px to pt Converter

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -835,6 +835,10 @@
       <a href="https://websemantics.uk/tools/font-size-conversion-pixel-point-em-rem-percent/">Font size conversion: pixel-point-em-rem-percent</a>,
       <i class="website">webSemantics</i>, 2017, udpated on 19.05.2020 (accessed 10.12.2020).
     </li>
+    <li>
+      <a href="https://everythingfonts.com/font/tools/units/px-to-pt">px to pt Converter</a>,
+      <i class="website">Everything Fonts</i> (no date; accessed 10.12.2020).
+    </li>
   </ul>
   <!--
   <section>
