--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -839,6 +839,9 @@
       <a href="https://everythingfonts.com/font/tools/units/px-to-pt">px to pt Converter</a>,
       <i class="website">Everything Fonts</i> (no date; accessed 10.12.2020).
     </li>
+    <li>
+      <a href="https://encycolorpedia.de/">Encycolorpedia</a>.
+    </li>
   </ul>
   <!--
   <section>
