Add: Creating accessible documents, TU Dresden

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -89,6 +89,12 @@
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in July 2016.
       </li>
       <li>
+        <a href="https://tu-dresden.de/tu-dresden/universitaetskultur/diversitaet-inklusion/agsbs/uebertragungsservice-1/barrierefreie-dokumente">Creating accessible documents</a>,
+        <i class="website" lang="de"><abbr>AG</abbr> Services Disability and Studies (<abbr>AGSBS</abbr>), Technische Universität Dresden</i>, last updated on 14.08.2020.
+        <br />See especially the section &ldquo;Instructions for barrier-free design of documents via Microsoft Word and PowerPoint&rdquo;,
+        where you can download <abbr>PDF</abbr> files with instructions for Microsoft Word 2007, Microsoft PowerPoint 2007, Microsoft Word 2013 and Microsoft PowerPoint 2013.
+      </li>
+      <li>
         <a href="https://webaim.org/techniques/ooo/">OpenOffice.org Writer</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in October 2011.
         <br />This document is now dated, especially with more frequent release of LibreOffice.
@@ -941,12 +947,22 @@
     </ul>
 
     <!--
-    <h2></h2>
-    <ul>
-      <li>
-        <a href=""></a>
-      </li>
-    </ul>
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>,
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    <section>
     -->
   </main>
 
