Add: Thibault: Maintaining accessibility through testing?

--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -184,6 +184,24 @@
         is a Python script checks for accessibility issues in Glade user interface description files.
       </li>
     </ul>
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>,
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    </section>
+    -->
   </main>
 
   <footer>
