--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1357,6 +1357,14 @@
         in Brussels on 3 February 2018. (Licence: Creative Commons Attribution licence (reuse allowed).)
         <!--Also on the LibreOffice channel: https://www.youtube.com/watch?v=1cVwKGOfWDk -->
       </li>
+      <li>Thibault, Samuel:
+        <a href="https://www.youtube.com/watch?v=rCjd7NDHAmg">Maintaining accessibility through testing?</a>
+        (<i class="ytchannel">FOSDEM</i> on YouTube, 18 minutes, 12.02.2018).
+        <br />Recording of a presentation in the Open Document Editors devroom at the FOSDEM conference in Brussels on 3 February 2018.
+        See also <a href="https://archive.fosdem.org/2018/schedule/event/ode_testing/">Maintaining accessibility through testing? in the FOSDEM 2018 schedule</a>.
+        (Licence: Creative Commons Attribution licence (reuse allowed).)
+        <!--Slides at http://brl.thefreecat.org/ -->
+      </li>
       <li>Strobbe, Christophe:
         <a href="https://fosdem.org/2019/schedule/event/educational_resources_on_digital_accessibility/">Open Educational Resources on Digital Accessibility for Building Your Own Courses</a>:
         presentation in the
