Add: hypra/gla11y: check accessibility of glade widgets

--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -183,6 +183,10 @@
         Gla11y (which stands for <a href="https://en.wikipedia.org/wiki/Glade_Interface_Designer">Glade</a> accessibility)
         is a Python script checks for accessibility issues in Glade user interface description files.
       </li>
+      <li>
+        <a href="https://github.com/hypra/gla11y">hypra/gla11y: check accessibility of glade widgets</a>:
+        source code repository on GitHub (<abbr title="Internet Systems Consortium">ISC</abbr> licence).
+      </li>
     </ul>
     <!--
     <section>
