--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1429,6 +1429,7 @@
     * Pressing pagedown button takes you to the next article instead of scrolling down (02.12.2020): https://www.euronews.com/2020/12/01/us-attorney-general-william-barr-says-no-widespread-election-fraud-disputing-trump
     * low contrast (grey on white, green on white) (02.12.2020): https://www.gesuendernet.de/gesundheit/gesunde-ernaehrung/item/1443-tee-gesundheit-aus-der-tasse.html
     * two head elements, each containing a title element (02.12.2020): https://dev.to/rly
+    * on hover, page pans, so button moves away from mouse: https://www.payot-rivages.fr/
   -->
   <!--@@ PowerPoint / presentations and cognitive load theory (needs separate page):
     * Andy Tharby: Using cognitive load theory to improve slideshow presentations. Durrington Research School (UK), 19.04.2018: https://researchschool.org.uk/durrington/blog/using-cognitive-load-theory-to-improve-slideshow-presentations
