Add: Snowden et al: Basic Vision: An Introduction to Visual Perception

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1280,6 +1280,10 @@
       <li>
         <a href="https://www.skjz.de/en_GB/"><span lang="de">Steffen KJ. Zimmermann &#8211; Experte für Barrierefreiheit</span> || Accessibility Expert</a>.
       </li>
+      <li>Snowden, Robert; Thompson, Peter; Troscianko, Tom:
+        <i class="booktitle">Basic Vision: An Introduction to Visual Perception</i>. Revised edition. Oxford University Press, 2012. (424 pages)
+        <a href="https://global.oup.com/academic/product/basic-vision-9780199572021"><abbr>ISBN</abbr> 9780199572021</a>.
+      </li>
     </ul>
 
     <p>Artifial intelligence (<abbr>AI</abbr>) and accessibility:</p>
@@ -1383,6 +1387,14 @@
         <li>
           <a href=""></a>,
           <i class=""></i>,
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
+        </li>
+        <li>
+          <i class="booktitle"></i>.
+          <a href=""><abbr>ISBN</abbr> </a>.
         </li>
         <li>
           <a href=""></a>
