Remove empty list item

--- a/tts.html
+++ b/tts.html
@@ -187,15 +187,22 @@
         8-minute YouTube video (November 2014) that shows how to download Eloquence, install it,
         and change the <abbr>NVDA</abbr> preferences to use Eloquence.
       </li>
-      <li>
-        <a href=""></a>
-      </li>
     </ul>
     <!--  
       * Nilkanth S. Shet Shirodkar: Text-To-Speech (TTS) Using Festival. January 2015. https://www.youtube.com/watch?v=lyRjx3CyhMA 
       * HakTip: Free Text to Speech with Linux. (Febuary 2012): https://www.youtube.com/watch?v=4uKTamXonPs
         Using Festival on Ubuntu. Also uses xsel and bash scripts. 
         - From the comments: Omilo - a GUI for Festival / Flite: https://sourceforge.net/projects/o-milo/ (for Windows and Linux).
+    -->
+    <!--  
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    </section>
     -->
   </main>
 
