--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1410,7 +1410,7 @@
     * Lexical Quality as a Measure for Textual Web Accessibility - Paper for Web Accessibility Metrics Symposium (W3C Web Accessibility Metrics Symposium, 05.12.2011: https://www.w3.org/WAI/RD/2011/metrics/paper5/ 
     * David Swallow: "Sounding out the web: accessibility for deaf and hard of hearing people [Part 1]", Paciello Group, 13.02.2017: https://www.paciellogroup.com/blog/2017/02/sounding-out-the-web-accessibility-for-deaf-and-hard-of-hearing-people-part-1/ 
     * Robert Nyman: "The Building For Just One Browser Thing", 18.01.2018: https://robertnyman.com/2018/01/18/the-building-for-just-one-browser-thing/#comment-1703327 (Not directly about accessibility.)
-    * object-explorer: " A resource to help figure out what JavaScript object method would be best to use at any given time https://sdras.github.io/object-explorer/": https://github.com/sdras/object-explorer
+    * object-explorer: "A resource to help figure out what JavaScript object method would be best to use at any given time https://sdras.github.io/object-explorer/": https://github.com/sdras/object-explorer
   -->
   <!--Browser accessibility features:
     * Accessibility features in Microsoft Edge: [only discusses Windows and Mac versions]: https://support.microsoft.com/en-us/help/4000734/microsoft-edge-accessibility-features
@@ -1438,6 +1438,7 @@
       - (02.12.2020) FinanzNachrichten.de: <div class="js-marque">: pausiert bei hover (kein Tastaturfokus?): https://www.finanznachrichten.de/nachrichten-2020-11/51366215-belgien-kritisiert-deutsche-corona-weihnachtsregeln-016.htm
       - (02.12.2020) https://businessam.be/belgie-start-op-5-januari-met-vaccineren-3/
       - (08.12.2020: marquee and animated gifs) https://www.officemuseum.com/
+      - (23.12.2020): marquee saying "Der Dienst cat.eduroam.de wird am 30. Juni 2021 eingestellt, nutzen Sie bitte cat.eduroam.org!" https://cat.eduroam.de/
     * Pressing pagedown button takes you to the next article instead of scrolling down (02.12.2020): https://www.euronews.com/2020/12/01/us-attorney-general-william-barr-says-no-widespread-election-fraud-disputing-trump
     * low contrast (grey on white, green on white) (02.12.2020): https://www.gesuendernet.de/gesundheit/gesunde-ernaehrung/item/1443-tee-gesundheit-aus-der-tasse.html
     * two head elements, each containing a title element (02.12.2020): https://dev.to/rly
