Add: Koss: Infinite Scroll: What Is It Good For?

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2040,6 +2040,13 @@
             </li>
           </ul>
         </li>
+        <li>Koss, Hal:
+          <a href="https://builtin.com/ux-design/infinite-scroll">Infinite Scroll: What Is It Good For?</a>,
+          <i class="webiste">Built In</i>, 21.12.2020.
+          <br />Tweeted by
+          <a href="https://twitter.com/paciellogroup/status/1341478264943108097">The Paciello Group, 22.12.2020</a>:
+          <q>Infinite scroll is an accessibility risk & questionable UX practice, and these experts agree: (&hellip;)</q>
+        </li>
       </ul>
     </section>
 
