Add: Other topics

--- a/404.html
+++ b/404.html
@@ -70,7 +70,12 @@ permalink: /404.html
             <li><a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a></li>
           </ul>
         </li>
-        <!-- @@TODO add "other topics" -->
+        <li>Other topics:
+          <ul>
+            <li><a href="social-legal.html">Social and Legal Aspects</a></li>
+            <!--@@TODO add "other topics"-->
+          </ul>
+        </li>
       </ul>
     </section>
 
@@ -80,7 +85,7 @@ permalink: /404.html
     <p id="licence"><a rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/"><img
     alt="Creative Commons License Attribution-ShareAlike" style="border-width:0"
-    src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /> </a> <br />
+    src="img/cc-licence-by-sa-88x31.png" /> </a> <br />
     <span xmlns:dct="http://purl.org/dc/terms/"
     href="http://purl.org/dc/dcmitype/Text"><a
     href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility
