--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
-  <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
+  <!--meta charset="utf-8" /--><!--Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
   <title>Page not found! | Accessibility Resources</title>
   <link rel="stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/verdemoderna.css" title="alternative stylesheet (green)" />
@@ -14,12 +14,12 @@ permalink: /404.html
   <link rel="index" href="/index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
-  <base id="base-url" url="http://cstrobbe.github.io/AccessibilityResources/" />
+  <base id="base-url" href="http://cstrobbe.github.io/AccessibilityResources/" />
   <script language="javascript">
     let baseElem = document.getElementById("base-url");
     let currentUrl = document.URL;
     let onGithub = currentUrl.includes("cstrobbe.github.io");
-    //console.log("Base URL = " + baseElem.getAttribute("url") + " Document URL = " + currentUrl);
+    //console.log("Base URL = " + baseElem.getAttribute("href") + " Document URL = " + currentUrl);
     //console.log("currentUrl includes cstrobbe.github.io: " + onGithub );
     if (!onGithub) {
       baseElem.parentNode.removeChild(baseElem);
