--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -742,6 +742,10 @@
         blog about the German accessibility that ran until February 2017.
       </li>
       <li>
+        <a href="https://thea11yfiles.wordpress.com/">The A11y Files | close encounters with assistive technology</a>.
+        This blog has not bee updated since 2017.<!--Status January 2021-->
+      </li>
+      <li>
         <a href="http://paulocanning.blogspot.com/search/label/accessibility">Paul Canning - label: accessibility</a>:
         articles labelled &ldquo;accessibility&rdquo; on Paul Canning's blog. The most recent
         contribution in this category dates from 2009.
