Add: Cook: The inspirational case for web accessibility

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -211,7 +211,7 @@
         The posters are available in the 
         <a href="https://github.com/UKHomeOffice/posters/tree/master/accessibility"><abbr>UK</abbr> Home Office's GitHub repository</a> 
         under Creative Commons BY-NC-SA license.
-        <!-- @@get posters!! -->
+        <!--@@get posters!! -->
       </li>
       <li><span lang="de">
         <a href="https://www.cedis.fu-berlin.de/services/systeme/cms/barrierefreiheit/index.html" hreflang="de">Barrierefreiheit • Content Management</a>,
@@ -434,6 +434,10 @@
       <li>Ishisaka, Naomi:
         <a href="https://www.seattletimes.com/seattle-news/how-accessibility-for-all-could-make-the-world-better-after-covid-19/">How embracing universal design could make the world better after <abbr>COVID</abbr>-19</a>,
         <i class="newspaper">Seattle Times</i>, 19.10.2020.
+      </li>
+      <li>Cook, Anna E.:
+        <a href="https://uxdesign.cc/the-inspirational-case-for-web-accessibility-2675a8245039">The inspirational case for web accessibility</a>,
+        <i class="website"><abbr>UX</abbr> Collective</i>, 30.08.2020 (six-minute read).
       </li>
     </ul>
 
@@ -1432,6 +1436,7 @@
       - "TITUS: Thesaurus Indogermanischer Text- und Sprachmaterialien": http://titus.fkidg1.uni-frankfurt.de/indexe.htm
       - Java SE API docs: https://docs.oracle.com/javase/7/docs/api/
       - Eclipse documentation: https://help.eclipse.org/2020-09/index.jsp
+      - http://www.rilke.de/index.html
     * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html 
     * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
     * animated background:
