Add: Boîte à outils d'accessibilité numérique - Gouvernement du Canada

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -133,6 +133,10 @@
         <i class="blog">Microsoft Accessibility Blog</i>, 19.03.2018. Quote:
         <q>We moved the <a href="https://support.office.com/en-us/article/Use-the-Accessibility-Checker-on-your-Windows-desktop-to-find-accessibility-issues-a16f6de0-2f39-4a2b-8bd8-5ad801426c7f">Accessibility Checker</a> to the ribbon and usage increased 5 times.</q>
       </li>
+      <li><span lang="fr">
+        <a href="https://canada-ca.github.io/a11y/fr/directives-relatives-aux-documents-accessibles-Office365/comment-creer-des-documents-accessibles-365.html" hreflang="fr">Comment créer des documents accessibles</a>,
+        <i class="website"> Boîte à outils d'accessibilité numérique - Gouvernement du Canada</i>,</span> 2010.
+      </li>
       <li>Thompson, Terrill:
         <a href="http://terrillthompson.com/blog/517">Converting Word to <abbr>PDF</abbr> or <abbr>HTML</abbr>: Options for Accessibility</a>,
         <i class="blog">Terrill Thompson's blog</i>, 30.06.2014.
