Add: Documents Word accessibles

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -135,7 +135,11 @@
       </li>
       <li><span lang="fr">
         <a href="https://canada-ca.github.io/a11y/fr/directives-relatives-aux-documents-accessibles-Office365/comment-creer-des-documents-accessibles-365.html" hreflang="fr">Comment créer des documents accessibles</a>,
-        <i class="website"> Boîte à outils d'accessibilité numérique - Gouvernement du Canada</i>,</span> 2010.
+        <i class="website">Boîte à outils d'accessibilité numérique - Gouvernement du Canada</i>,</span> 2010.
+      </li>
+      <li><span lang="fr">
+        <a href="https://www.technologie-handicap-accessibilite.net/dossiers/creer-des-documents-accessibles/documents-word-accessibles/">Documents Word accessibles</a>,
+        <i class="website">Technologie, Handicap, Accessibilité</i></span> (no date).
       </li>
       <li>Thompson, Terrill:
         <a href="http://terrillthompson.com/blog/517">Converting Word to <abbr>PDF</abbr> or <abbr>HTML</abbr>: Options for Accessibility</a>,
