Remove outdated MDRC link; update inclusivedesign.no to doga.no

--- a/terminology.html
+++ b/terminology.html
@@ -76,9 +76,6 @@
 
     <h2>How to Talk About (People with) Disabilities</h2>
     <ul>
-      <li>Michigan Disability Rights Coalition (<abbr>MDRC</abbr>):
-        <a href="http://www.copower.org/leadership/models-of-disability">Models of Disability</a>.
-      </li>
       <li>Carter, Sheena L. (Emory University School of Medicine):
         <a href="http://www.pediatrics.emory.edu/divisions/neonatology/dpc/Impairment%20MX.html">Impairment, Disability and Handicap</a>.
         This article uses the definitions of the World Health Organzation's
@@ -196,9 +193,9 @@
         the Commission for Architecture and the Built Environment (<abbr>CABE</abbr>),
         and the principles of universal design.
       </li>
-      <li>The Norwegian Centre for Design and Architecture:
+      <li>DOGA (formerly The Norwegian Centre for Design and Architecture):
         Inclusive Design - a people centered strategy for innovation:
-        <a href="http://www.inclusivedesign.no/practical-tools/definitions-article56-127.html">Definitions</a>.
+        <a href="https://doga.no/en/tools/inclusive-design/what-is-inclusive-design/definitions/">Definitions</a>.
         Defines Inclusive Design (based on the <abbr>UK</abbr> government's definition),
         Universal Design (<abbr>USA</abbr>) and Design For All.
       </li>
