--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1441,11 +1441,14 @@
       - Java SE API docs: https://docs.oracle.com/javase/7/docs/api/
       - Eclipse documentation: https://help.eclipse.org/2020-09/index.jsp
       - http://www.rilke.de/index.html
+      - [09.01.2021] http://www.enenuru.net/html/main_html/mainframe.htm
     * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html 
     * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
     * animated background:
       background video (November 2020): https://psychoslinux.gitlab.io/
       background animation (snowflakes, 10.12.2020): https://websemantics.uk/tools/font-size-conversion-pixel-point-em-rem-percent/
+    * animated gif:
+      - animation in logo (10.01.2021): https://www.ethicalsystems.org/
     * marquee:
       - (Nov 2020) https://www.bundesregierung.de/breg-de/service/publikationen/nationaler-aktionsplan-2-0-der-bundesregierung-zur-un-behindertenrechtskonvention-un-brk--729496
       - (02.12.2020) FinanzNachrichten.de: <div class="js-marque">: pausiert bei hover (kein Tastaturfokus?): https://www.finanznachrichten.de/nachrichten-2020-11/51366215-belgien-kritisiert-deutsche-corona-weihnachtsregeln-016.htm
