Remove non-responsive link: andrelouis.com

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -321,14 +321,13 @@
         and Level Description Language</a>.
         <br />This is an open-source project to create an first-person shooter
         (<abbr>FPS</abbr>) that is accessible to blind and vision-impaired gamers.
-        <br />To download the game, go to 
-        <a href="http://tbrn.andrelouis.com/modgirl/">Jedi Quake</a> (a mod of AudioQuake).
+        <!--<del datetime="2021-01-10">To download the game, go to <a href="http://tbrn.andrelouis.com/modgirl/">Jedi Quake</a> (a mod of AudioQuake).</del>-->
         <br />For more background, visit 
         <a href="http://agrip.org.uk/">The <abbr>AGRIP</abbr> Project</a>.
       </li>
       <li>
         <a href="http://terraformers.nu/">Terraformers &#8211; Accessible 3D game for blind &amp; sighted</a>.
-        <!-- Thomas Westin -->
+        <!--Thomas Westin -->
       </li>
       <li>
         <a href="http://www.ics.forth.gr/hci/ua-games/ua-chess/"><abbr>UA</abbr>-Chess</a>:
