Add: How to Disable Autoplay Videos in LinkedIn for Desktop, Android, and iOS

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -181,6 +181,10 @@
           <i class="website">iDownloadBlog.com</i>, 11.11.2020.
           <!--@@low contrast for author name!?-->
         </li>
+        <li>Edwards-Onoro, Deborah:
+          <a href="https://www.lireo.com/how-to-disable-autoplay-videos-in-linkedin-for-desktop-android-and-ios/">How to Disable Autoplay Videos in LinkedIn for Desktop, Android, and iOS</a>,
+          <i class="website">Lireo Designs</i>, 27.12.2017.
+        </li>
         <li><a href="http://ask.metafilter.com/277495/Computing-hacks-for-migraine-sufferers">Computing hacks for migraine sufferers</a>,
           <i class="website">AskMetaFilter</i>, 19.03.2015.
         </li>
