Add: Microsoft Docs: Code samples for common accessibility issues in Windows apps

--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -187,6 +187,10 @@
         <a href="https://github.com/hypra/gla11y">hypra/gla11y: check accessibility of glade widgets</a>:
         source code repository on GitHub (<abbr title="Internet Systems Consortium">ISC</abbr> licence).
       </li>
+      <li>
+        <a href="https://docs.microsoft.com/en-us/accessibility-tools-docs/">Code samples for common accessibility issues in Windows apps</a>,
+        <i class="website">Microsoft Docs</i> (no date).
+      </li>
     </ul>
     <!--
     <section>
