Add description for MAUVE; OpenAjax Alliance rules and rulesets: outdated link

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -135,7 +135,8 @@
         Like <abbr>FAE</abbr> it evaluates the conformance of web content
         against <abbr>WCAG</abbr> 2.0 Level A or Level AA.
         Like <abbr>FAE</abbr>, it uses the 
-        <a href="http://www.openajax.org/member/wiki/Accessibility">OpenAjax Alliance rules and rulesets</a>.
+        <del datetime="2021-01-14"><a href="http://www.openajax.org/member/wiki/Accessibility">OpenAjax Alliance rules and rulesets</a></del>
+        <ins datetime="2021-01-14"><a href="https://ainspector.github.io/rulesets.html">OpenAjax Alliance rules and rulesets</a></ins>.
         See also the 
         <a href="http://ainspector.github.io/">AInspector Sidebar Documentation</a>
         and the
@@ -193,7 +194,10 @@
         <a href="http://pa11y.org/">Pa11y.org</a> and the
         <a href="https://stackoverflow.com/questions/tagged/pa11y">questions tagged <code>pa11y</code> on Stack Overflow</a>.
       </li>
-      <li><a href="http://hiis.isti.cnr.it:8880/MauveWeb/"><abbr>MAUVE</abbr>: Multiguideline Accessibility and Usability Validation Environment</a>.
+      <li><a href="http://hiis.isti.cnr.it:8880/MauveWeb/"><abbr>MAUVE</abbr>: Multiguideline Accessibility and Usability Validation Environment</a>:
+      <q cite="http://hiis.isti.cnr.it:8880/MauveWeb/about.jsp"><abbr>MAUVE</abbr>++ (Multiguideline Accessibility and Usability Validation Environment)
+      is a system to evaluate accessibility of websites by checking their HTML and CSS code through guidelines, it provides validation results for different types of stakeholders,
+      and supports validation of <abbr>W3C</abbr> <abbr>WCAG</abbr> 2.1 guidelines.</q>
       </li>
       <li>Addy Osmani and Matt Gaunt:
         <a href="https://www.youtube.com/watch?v=pBJZsp5LsOE">Totally Tooling Tips: Accessibility</a>:<!--@@recheck link, Nov 2020-->
