Add: Leduc: How to Test for Mobile Accessibility. Vinkle: Mobile Screen Reader Testing

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -137,6 +137,14 @@
         hour-long video where Sommer Panage explains Twitter accessibility for Android
         (27 May 2014; YouTube; no captions). 
       </li>
+      <li>Leduc, Jaclyn:
+        <a href="https://www.3playmedia.com/blog/how-to-test-for-mobile-accessibility/">How to Test for Mobile Accessibility</a>,
+        <i class="website">3 Play Media</i>, 16.10.2019, updated on 17.10.2019.
+      </li>
+      <li>Vinkle, Scott:
+        <a href="https://scottvinkle.me/blogs/work/mobile-screen-reader-testing">Mobile Screen Reader Testing</a>,
+        <i class="website">Scott Vinkle</i>, 30.10.2020.
+      </li>
     </ul>
 
     <h3>Web Development for Mobile Devices</h3>
@@ -381,6 +389,29 @@
         <abbr>JDE</abbr> <abbr>API</abbr> Reference: Overview</a>
       </li>
     </ul>
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>
+        </li>
+        <li>:
+          <i class="booktitle"></i>.
+          <abbr>ISBN</abbr> .
+        </li>
+        <li><span lang="de">
+          <a href="" hreflang="de"></a>,
+          <i class=""></i></span>,
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+      </h2>
+    </section>
+    -->
   </main>
 
   <footer>
