Add: The Standards (Audio Description Coalition); WCAG H96

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -450,6 +450,8 @@
         <a href="https://sourceforge.net/projects/ahdsubtitles/">AHD Subtitles Maker Professional</a>:
         free and open source tool (<abbr>GPL</abbr> 3 licence).</del>
         The source code is no longer available on SourceForge.
+        <br /><a href="https://github.com/alaahadid/AHD-Subtitles-Maker/"><abbr>AHD</abbr> Subtitles Maker</a>:
+        free and open source tool (<abbr>GPL</abbr> 3 licence) for Microsoft Windows only.
       </li>
       <li>
         <a href="https://sourceforge.net/projects/subworkshop/">Subtitle Workshop</a>:
@@ -460,8 +462,9 @@
         cross-platform free and open source tool.
       </li>
       <li>
-        <a href="https://gnome-subtitles.sourceforge.net/">GNOME Subtitles</a>:<!--@@recheck link, Nov 2020-->
+        <a href="http://www.gnomesubtitles.org/">GNOME Subtitles</a>:
         free and open source tool for <abbr>GNU</abbr>/Linux.
+        <!--SourceForge: https://sourceforge.net/projects/gnome-subtitles/ -->
       </li>
       <li>
         <a href="https://github.com/noophq/subtitle">noOp's subtitle</a> 
@@ -601,6 +604,15 @@
         <i class="website">Web Accessibility Initiative (<abbr>WAI</abbr>), <abbr>W3C</abbr></i> (no date).
       </li>
       <li>
+        <a href="https://audiodescriptionsolutions.com/the-standards/">The Standards</a>,
+        <i class="website">Audio Description Solutions</i>.
+        <br />This is a page from which you can download the audio description standards formulated by the
+        <a href="https://audiodescriptionsolutions.com/the-standards/audio-description-coalition/">Audio Description Coalition</a> in the <abbr>USA</abbr>.
+        The document dates from 2009 (third edition) and covers general guidelines, guidelines unique to live description,
+        guidelines unique to dance description, guidelines unique to opera description, guidelines unique to film and video description,
+        guidelines unique to museum and exhibit description and a code of professional conduct.
+      </li>
+      <li>
         <a href="https://accessibility.colostate.edu/audio-description/">Audio Description</a>,
         <i class="website">Accessibility by Design, Colorado State University</i> (no date).
       </li>
@@ -617,6 +629,15 @@
         <a href="https://www.visionaustralia.org/community/news/2019-08-23/wcag-confusion-around-audio-description-0"><abbr>WCAG</abbr> confusion around audio description</a>,
         <i class="website">Vision Australia</i>, 30.07.2019.
       </li>
+      <li>
+        <a href="https://www.w3.org/WAI/WCAG21/Techniques/html/H96">Advisory technique H96: Using the track element to provide audio descriptions</a>,
+        <i class="website">Techniques for <abbr>WCAG</abbr> 2.1</i>.
+        <!--Wiki version:  & https://www.w3.org/WAI/GL/wiki/Using_the_track_element_to_provide_audio_descriptions -->
+      </li>
+    </ul>
+
+    <p>YouDescribe:</p>
+    <ul>
       <li><a class="gz-hci" href="https://youdescribe.org/">YouDescribe</a>:
         a free online tool for adding audio description to YouTube videos.
         As of 2020, you can only log in to YouDescribe with Google.
@@ -630,13 +651,19 @@
         <i class="journal">The Journal of Interactive Technology and Pedagogy</i>, 22.12.2015.
         <!--@@todo read! -->
       </li>
+    </ul>
+    <p>Examples of videos with audio description:</p>
+    <ul>
       <li>
         <a href="https://www.youtube.com/watch?v=EKGOWavFvHc">We're The Superhumans | Rio Paralympics 2016 Trailer</a>:
         audio-described video by Channel 4. (Captions can also be activated.
         There is also a <a href="https://www.youtube.com/watch?v=IocLkk3aYlk">version without audio description</a>.)
+        <!--
+          Signed & Subtitled: We're The Superhumans | Rio Paralympics 2016 Trailer
+          https://www.youtube.com/watch?v=Y76hSxoxClg
+        -->
       </li>
       <!--Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8
-        Advisory technique H96: Using the track element to provide audio descriptions: https://www.w3.org/WAI/WCAG21/Techniques/html/H96 & https://www.w3.org/WAI/GL/wiki/Using_the_track_element_to_provide_audio_descriptions
       -->
     </ul>
 
