Add: h2: Exams and Certificates

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -818,6 +818,40 @@
       </li>
     </ul>
 
+    <section>
+      <h2>Exams and Certificates</h2>
+      <ul>
+        <li>
+          <a href="https://www.accessibilityassociation.org/prepandcaec">Certification Preparation and Continuing Education (<abbr>CPAC</abbr>)</a>,
+          <i class="website"><abbr>IAAP</abbr></i>.
+        </li>
+        <li>
+          <a href="https://www.accessibilityassociation.org/prepareforcpacc">Prepare for <abbr title="Certification Preparation and Continuing Education">CPAC</abbr></a>,
+          <i class="website"><abbr>IAAP</abbr></i>.
+        </li>
+        <li>
+          <a href="https://www.accessibilityassociation.org/wascertification">Web Accessibility Specialist (<abbr>WAS</abbr>)</a>,
+          <i class="website"><abbr>IAAP</abbr></i>.
+        </li>
+        <li>
+          <a href="https://www.accessibilityassociation.org/prepareforwas">Prepare for <abbr>WAS</abbr></a>,
+          <i class="website"><abbr>IAAP</abbr></i>.
+        </li>
+        <li>
+          <a href="https://www.accessibilityassociation.org/cpwa">Certified Professional in Web Accessibility (<abbr>CPWA</abbr>)</a>,
+          <i class="website"><abbr>IAAP</abbr></i>.
+        </li>
+        <li>
+          <a href="https://www.accessibilityassociation.org/adscontentoutline">Accessible Document Specialist Content Outline</a>,
+          <i class="website"><abbr>IAAP</abbr></i>.
+      </ul>
+      <!--
+        https://duckduckgo.com/?q=preparation+for+certificate+iwas+iaap+%22web+accessibility+specialist%22&t=ffab&ia=web
+        https://dequeuniversity.com/curriculum/packages/iaap-certification-prep
+        https://dequeuniversity.com/curriculum/packages/iaap-was
+      -->
+    </section>
+
     <h2>Accessibility Metadata</h2>
     <ul>
       <li>
@@ -1459,6 +1493,9 @@
     * low contrast (grey on white, green on white) (02.12.2020): https://www.gesuendernet.de/gesundheit/gesunde-ernaehrung/item/1443-tee-gesundheit-aus-der-tasse.html
     * two head elements, each containing a title element (02.12.2020): https://dev.to/rly
     * on hover, page pans, so button moves away from mouse: https://www.payot-rivages.fr/
+    * empty title element:
+      - (12.01.2021: "Reliable Sources" / "Tell us what happened") https://view.newsletters.cnn.com/messages/16104260848347cd1650aacd3/raw
+    * h1 element: "T H E   C A N T E R B U R Y   T A L E S" : http://www.librarius.com/index.html
   -->
   <!--@@ PowerPoint / presentations and cognitive load theory (needs separate page):
     * Andy Tharby: Using cognitive load theory to improve slideshow presentations. Durrington Research School (UK), 19.04.2018: https://researchschool.org.uk/durrington/blog/using-cognitive-load-theory-to-improve-slideshow-presentations
